# fastapi_celery

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 7d9e3d1758c9_.py  99de5703d108_.py
src/: __init__.py  celery_utils.py  config.py  db.py
src/users/: __init__.py  models.py
